# University_Projects_Labs

./: README.md
Assembly/: f.asm  f2.asm  imp.asm  sum.asm  user.asm  vpar.asm
Betriebssysteme/assig1/: aufgabe9.sh  prim.sh
Betriebssysteme/assig2/: aufgabe3s.sh  aufgabe4g.sh
Betriebssysteme/assig3/: aufgabe8.sh  f1.txt  f2.txt  f3.txt
Betriebssysteme/assig4/: aufgabe5.sh
Betriebssysteme/assig5/: ex4  ex4.c  f1.txt  f2.txt
Betriebssysteme/assig6/: ex3  ex3.c
Betriebssysteme/assig7/: client_server  client_server.c
Betriebssysteme/assig8/: 1.c
Betriebssysteme/praktikum/: pipe  pipe.c  shell.sh
Computernetzwerke/: Proiectfinalretele.pkt
DSA/Baglab1/: App.cpp  (+9 more)
DSA/Maplab3/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp  ShortTest.h  test.cpp
DSA/MultiMaplab2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp  ShortTest.h
DSA/Setlab4/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp  ShortTest.h  test.cpp
Datenbanken/: SQLQueryLab2part1.sql  SQLQueryLab3.sql  SQLQueryLab4.sql  SQLQueryLab5.sql
Logische_Programmierung/: Labor2  Labor3  Labor4  Labor5  Labor6
OOP/seminar7/: BusStrategy.cpp  BusStrategy.h  CMakeLists.txt  Navigator.cpp  Navigator.h  RoadStrategy.cpp  RoadStrategy.h  Route.cpp  Route.h  RouteStrategy.cpp  RouteStrategy.h  TableRowAdapter.cpp  TableRowAdapter.h  Vehicle.cpp  Vehicle.h  VehicleTableRowAdapter.cpp  VehicleTableRowAdapter.h  WalkStrategy.cpp  WalkStrategy.h  main.cpp
Wahrscheinlichkeitstheorie_und_Statistik/: Lab1.py
(+203 files in other folders)
